--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amar</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/star.css">
     <link rel="icon" type="image/x-icon" href="img/fav.png" class="fav">
@@ -92,13 +93,14 @@
         </section>
         <section class="fstsec bg" id="about">
             <div class="box">
-                <div>
+                <div style="text-align:center ;">
                     <h1 class="txt">About Me</h1>
                     <img src="img/lin.jpg" class="me">
                     <p class="co">Hi! I'm Amar Singh.</p>
                     <p class="co">I'm a freshman at NIT Trichy pursuing B.Tech in Instrumentation and Control Engineering.</p>
                     <p class="con ">Let's talk about the things I know and like :)</p>
-                    <img src="img/key.png" class="key" >
+                    <!-- <img src="img/key.png" class="key" > -->
+                    <i class="fa-solid fa-chevron-down key" > </i>
                 </div>
             </div>
         </section>
@@ -107,7 +109,8 @@
                     <h1 class="txt2">Things I Like</h1>
                     <div class="do box">
                         <div class="ca strt">
-                            <img src="img/strt.png" class="hp">
+                            <!-- <img src="img/strt.png" class="hp"> -->
+                            <i class="fa-solid fa-rocket hp"></i>
                             <h2 class="card">Startups</h2>
                             <div class="cp">
                                 <p>Reading about startups and entrepreneurs is something I enjoy a lot.</p>
@@ -115,7 +118,8 @@
                             </div>
                         </div>
                         <div class="ca cr">
-                            <img src="img/cr.png" class="hp">
+                            <!-- <img src="img/cr.png" class="hp"> -->
+                            <i class="fa-solid fa-volleyball hp"></i>
                             <h2 class="card">Sports</h2>
                             <div class="cp">
                                 <p>I love playing cricket a lot and also enjoy watching it.</p>
@@ -123,7 +127,8 @@
                             </div>
                         </div>
                         <div class="ca mo">
-                            <img src="img/mo.png" class="hp">
+                            <!-- <img src="img/mo.png" class="hp"> -->
+                            <i class="fa-solid fa-film hp"></i>
                             <h2 class="card">Movies</h2>
                             <div class="cp">
                                 <p>Love watching shows and movies, it makes me experience different emotions.</p>
@@ -131,7 +136,8 @@
                             </div>
                         </div>
                         <div class="ca mu">
-                            <img src="img/mu.png" class="hp">
+                            <!-- <img src="img/mu.png" class="hp"> -->
+                            <i class="fa-solid fa-music hp"></i>
                             <h2 class="card">Music</h2>
                             <div class="cp">
                                 <p>Music helps me to relax.</p>
@@ -149,11 +155,16 @@
                     <div class="">
                         <h1 class="txt1">Skillset</h1>
                         <div class="imgw">
-                            <img class="html" src="img/html.png" alt="">
-                            <img class="css" src="img/css.png" alt="">
-                            <img class="js" src="img/js.png" alt="">
-                            <img class="node" src="img/node.png" alt="">
-                            <img class="py" src="img/py.png" alt="">
+                            <!-- <img class="html" src="img/html.png" alt=""> -->
+                            <!-- <img class="css" src="img/css.png" alt=""> -->
+                            <!-- <img class="js" src="img/js.png" alt=""> -->
+                            <!-- <img class="node" src="img/node.png" alt=""> -->
+                            <!-- <img class="py" src="img/py.png" alt=""> -->
+                            <i class="fa-brands fa-html5 html"></i>
+                            <i class="fa-brands fa-css3-alt css"></i>
+                            <i class="fa-brands fa-js js"></i>
+                            <i class="fa-brands fa-node node"></i>
+                            <i class="fa-brands fa-python py"></i>
                         </div>
                     </div>
                 </div>
@@ -164,16 +175,20 @@
                 <div class="box">
                     <div>
                         <h1 class="txt3">Contact Me</h1>
-                        <div class="cont"></div>
+                        <div class="cont">
                             <a href="https://www.linkedin.com/in/amarsingh23/" target="_blank">
-                                <img src="img/in.png" class="in">
+                                <!-- <img src="img/in.png" class="in"> -->
+                                <i class="fa-brands fa-linkedin in"></i>
                             </a>
                             <a href="https://twitter.com/the_eternal_guy" target="_blank">
-                                <img src="img/tw.png" class="tw">
+                                <!-- <img src="img/tw.png" class="tw"> -->
+                                <i class="fa-brands fa-twitter tw"></i>
                             </a>
                             <a href="https://github.com/AMAR2303" target="_blank">
-                                <img src="img/git'.png" class="tw">
+                                <!-- <img src="img/git'.png" class="tw"> -->
+                                <i class="fa-brands fa-github tw"></i>
                             </a>
+                            </div>
                         </div>
                     </div>
                 </div>
