Added functionality to the arrow icon

--- a/index.html
+++ b/index.html
@@ -98,12 +98,13 @@
                     <p class="co">Hi! I'm Amar Singh.</p>
                     <p class="co">I'm a freshman at NIT Trichy pursuing B.Tech in Instrumentation and Control Engineering.</p>
                     <p class="con ">Let's talk about the things I know and like :)</p>
-                    <img src="img/key.png" class="key" >
+                    <a href="#another_section"><img src="img/key.png" class="key" ></a>
                 </div>
             </div>
         </section>
-        <section class="hobsec">
+        <section class="hobsec" id="another_section">
             <div>
+                <div style="padding-top: 50px;">
                     <h1 class="txt2">Things I Like</h1>
                     <div class="do box">
                         <div class="ca strt">
@@ -141,6 +142,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </section>
         <section class="secsec">
