--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <nav class="navbar bg">
         <ul class="li">
             <div class="logo"><img src="img/lo.png" alt=""></div>
-            <li class="rg"><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <div class="sham" style="display: flex; justify-content:center;" >
+                <li class="rg" style="margin-left: 80%;"><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </div>
         </ul>
     </nav>
     <div class="container">
