added font awesome icone

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/star.css">
     <link rel="icon" type="image/x-icon" href="img/fav.png" class="fav">
     <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://kit.fontawesome.com/e9cd8ca081.js" crossorigin="anonymous"></script>
     <script>
         ScrollReveal.debug = true;
     </script>
@@ -151,11 +152,11 @@
                     <div class="">
                         <h1 class="txt1">Skillset</h1>
                         <div class="imgw">
-                            <img class="html" src="img/html.png" alt="">
-                            <img class="css" src="img/css.png" alt="">
-                            <img class="js" src="img/js.png" alt="">
-                            <img class="node" src="img/node.png" alt="">
-                            <img class="py" src="img/py.png" alt="">
+                            <i style="font-size: 140px; color: red;" class="fa-brands fa-html5 html"></i>
+                            <i style="font-size: 140px; color: blue;" class="fa-brands fa-css3-alt css"></i>
+                            <i style="font-size: 140px; color: yellow;" class="fa-brands fa-square-js js"></i>
+                            <i style="font-size: 140px; color: green;" class="fa-brands fa-node node"></i>
+                            <i style="font-size: 140px; color: rgb(29, 210, 255);" class="fa-brands fa-python py"></i>
                         </div>
                     </div>
                 </div>
