added font awesome icons

--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
                     <div class="">
                         <h1 class="txt1">Skillset</h1>
                         <div class="imgw">
-                            <i style="font-size: 140px; color: red;" class="fa-brands fa-html5 html"></i>
-                            <i style="font-size: 140px; color: blue;" class="fa-brands fa-css3-alt css"></i>
-                            <i style="font-size: 140px; color: yellow;" class="fa-brands fa-square-js js"></i>
-                            <i style="font-size: 140px; color: green;" class="fa-brands fa-node node"></i>
+                            <i style="font-size: 140px; color: rgb(245, 75, 75);" class="fa-brands fa-html5 html"></i>
+                            <i style="font-size: 140px; color: rgb(36, 36, 248);" class="fa-brands fa-css3-alt css"></i>
+                            <i style="font-size: 140px; color: rgb(255, 255, 80);" class="fa-brands fa-square-js js"></i>
+                            <i style="font-size: 140px; color: rgb(56, 163, 56);" class="fa-brands fa-node node"></i>
                             <i style="font-size: 140px; color: rgb(29, 210, 255);" class="fa-brands fa-python py"></i>
                         </div>
                     </div>
